<resources>
    <string name="app_name">Distance Tracker</string>
    // Permission Fragment
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker. In order to use our application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap on the button below.</string>
    <string name="permission_required">Permission Required</string>

    // Maps Fragment
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="go">GO</string>
    <string name="tap_on_my_location_button">Tap on My Location Button.</string>
    <string name="_3">3</string>

    // Result Fragment
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0_0km">0.0km</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_location_permission_required">Location permission is required</string>
    <string name="str_location">Location</string>
    <string name="str_allow">Allow</string>
    <string name="str_deny">Deny</string>
    <string name="str_provide_permissions">Please provide following permissions</string>


    <!-- New Resources-->
    <string name="str_distance_calculating_error">Error Calculating Distance</string>
    <string name="str_settings">Settings</string>
    <string name="str_gps_warning">Please enable GPS \n otherwise location tracking won\'t work</string>
    <string name="str_network_warning">Please enable network \n otherwise location tracking won\'t work</string>
    <string name="network_is_available">Network connected</string>
    <string name="network_is_unavailable">Network connection is lost</string>
    <string name="statistics">Statistics</string>

    <string name="toast_updated">App successfully updated</string>
    <string name="toast_failed">It was not possible to update your app</string>
    <string name="toast_cancelled">App update cancelled</string>

</resources>